@@ -1,5 +1,11 @@
 2007-07-27  Denis Washington  <dwashington@gmx.net>
 
+	* appearanc-themes.c: (appearance_window_drag_data_received_cb),
+	(themes_init):
+	Implement drag-and drop theme installation.
+
+2007-07-27  Denis Washington  <dwashington@gmx.net>
+
 	* data/cursor-*.pcf:
 	* data/mouse-cursor-*.png:
 	Cursor fonts and thumbnails moved from gnome-mouse-properties.
